tests/errors/surf_cont_11.ki
# list indexed by a Float instead of an Integer
var a = [1, 2, 3]
discard a[1.0]
